Implemented the next UI Fragments

--- a/app/src/main/res/layout/home_recycler_view_element.xml
+++ b/app/src/main/res/layout/home_recycler_view_element.xml
@@ -3,13 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/item_background_color"
+    >
 
     <ImageView
         android:id="@+id/video_thumbnail"
         android:layout_width="match_parent"
         android:layout_height="350dp"
-        android:maxHeight="350dp"
         android:src="@drawable/youtube"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,12 +20,15 @@
 
     <TextView
         android:id="@+id/video_title"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
         android:text="@string/video_title"
-        android:textColor="#000"
-        android:textSize="22sp"
+        android:textColor="@color/text_color"
+        android:textSize="18sp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="32dp"
+        android:ellipsize="end"
+        android:lines="2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/video_thumbnail" />
 
@@ -32,9 +36,11 @@
         android:id="@+id/uploader_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_marginStart="16dp"
         android:text="@string/uploader_name"
-        android:textSize="16sp"
+        android:textColor="@color/text_color"
+        android:textSize="12sp"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/video_title" />
 
